add config for croos chain, add support for eth

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,46 @@ MULTISIG_TREASURY=  # multisig treasury
 PRIVATE_KEY= # contract creator / owner
 MINTING_CHAIN_ID= # minting token on chain id
 
-BASE_CHAIN_ID= # layerzero chain id for base
-BSC_CHAIN_ID= # layerzero chain id for bsc
+BSC_CHAIN_EID= # layerzero chain eid for bsc
+BASE_CHAIN_EID= # layerzero chain eid for base
+ETH_CHAIN_EID= # layerzero chain eid for eth
 
-BSC_CONTRACT_TESTNET= # token contract address on bsc
-BASE_CONTRACT_TESTNET= # token contract address on base
+BSC_CONTRACT= # token contract address on bsc
+BASE_CONTRACT= # token contract address on base
+ETH_CONTRACT= # token contract address on eth
 
-SENDER_BASE_PRIVATE_KEY= # sender private key on base
-RECEIVER_BSC_ADDRESS= # receiver address on bsc
+BSC_SEND_LIB_ADDRESS= # SendUln302 on bsc
+BSC_RECEIVE_LIB_ADDRESS= # ReceiveUln30 on bsc
+
+BASE_SEND_LIB_ADDRESS= # SendUln302 on base
+BASE_RECEIVE_LIB_ADDRESS= # ReceiveUln30 on base
+
+ETH_SEND_LIB_ADDRESS= # SendUln302 on eth
+ETH_RECEIVE_LIB_ADDRESS= # ReceiveUln30 on eth
+
+GRACE_PERIOD=0
+
+# Sort DVNs, 
+BSC_DVN_1=
+BSC_DVN_2=
+BSC_DVN_3=
+
+BASE_DVN_1=
+BASE_DVN_2=
+BASE_DVN_3=
+
+ETH_DVN_1=
+ETH_DVN_2=
+ETH_DVN_3=
+
+BSC_EXECUTOR=
+BASE_EXECUTOR=
+ETH_EXECUTOR=
 
 SENDER_BSC_PRIVATE_KEY= # sender private key on bsc
+SENDER_BASE_PRIVATE_KEY= # sender private key on base
+SENDER_ETH_PRIVATE_KEY= # sender private key on eth
+
 RECEIVER_BASE_ADDRESS= # reciver address on base
+RECEIVER_ETH_ADDRESS= # reciver address on eth
+RECEIVER_BSC_ADDRESS= # receiver address on bsc
